Tái cấu giao diện login, register

--- a/WebBanRauCu/WebBanRauCu.csproj
+++ b/WebBanRauCu/WebBanRauCu.csproj
@@ -29,4 +29,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="10.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\background\" />
+  </ItemGroup>
+
 </Project>
